<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name">Travel App </string>
	<string name="name_app">TRAVEL APP</string>
	<string name="splash_bottom_text">Powered by SoAni Tech </string>
	<string name="image_description">Background Image </string>
	<string name="title_activity_login">Login</string>
	<string name="login_info">Please sign in to continue</string>
	<string name="sign_up">Sign Up</string>
	<string name="sign_up_bottom">SIGN UP</string>
	<string name="want_signUp">Dont have an account?</string>
	<string name="password_forgot">FORGOT</string>
	<string name="prompt_password_reset">Reset Password</string>
	<string name="action_save">"Save"</string>
	<string name="prompt_email">Email</string>
	<string name="prompt_country">Country</string>
	<string name="prompt_phone">Phone</string>
	<string name="prompt_dob">Date of Birth</string>
	<string name="prompt_confirm_password">Confirm Password</string>
	<string name="prompt_password">Password</string>
	<string name="confm_password">Password</string>
	<string name="action_sign_in">Login</string>
	<string name="action_sign_in_short">Sign Up</string>
	<string name="welcome">"Welcome !"</string>
	<string name="prompt_full_name">Full Name</string>
	<string name="invalid_username">Not a valid username</string>
	<string name="invalid_password">Password must be >5 characters</string>
	<string name="title_login_failed">"Login failed"</string>
	<string name="title_forgot_password">Forgot Password</string>
	<string name="info_forgot_password">"An email with reset link will be sent to provided email address."</string>
	<string name="action_forgot_password">"Send"</string>
	<string name="dashboard_welcome">Welcome,</string>
	<string name="dashboard_username">John Doe</string>
	<string name="dashboard_location">Lalitpur</string>
	<string name="dashboard_temperature">20°</string>
	<string name="dashboard_bookings">Bookings</string>
	<string name="dashboard_itinerary">Itinerary</string>
	<string name="dashboard_contact">Contact</string>
	<string name="dashboard_recent_booking">Recent Booking</string>
	<string name="dashboard_see_all">SEE ALL</string>
	<string name="text_ghandruk">Ghandruk</string>
	<string name="text_ghandruk_details">5 days(Feb1-Feb5)</string>
	<string name="text_mustang">Upper Mustang</string>
	<string name="text_mustang_details">5 days(Mar1-Mar14)</string>
	<string name="text_everest">Everest Base Camp</string>
	<string name="text_everest_details">5days(Feb1-Feb5)</string>
	<string name="text_chitlang">Chitlang/Markhu</string>
	<string name="text_chitlang_details">2 days(Feb10-Feb11)</string>
	<string name="text_booked_by">Booked by:</string>
	<string name="booked_person_name">David Johnson</string>
	<string name="text_guest_number">No. of Guest</string>
	<string name="number_guest_booked">5</string>
	<string name="text_tour_date"> Tour Date</string>
	<string name="date_tour_booked">Feb 10 -Feb 24</string>
	<string name="text_duration">Duration</string>
	<string name="duration_of_days">15 days</string>
	<string name="text_trek_everest_name">Everest Base Camp Trek</string>
	<string name="text_view_itinerary">View Itinerary</string>
	<string name="text_title_itinerary_list">Itinerary</string>
	<string name="text_details_day_one">Arrival and pick up at airport, checkout and overnight stay at hotel.</string>
	<string name="text_day_one">Day\n 1</string>
	<string name="text_details_day_two">Catch the mountain flight to Lukla, enjoying stunning views of the himalayas.</string>
	<string name="text_day_two">Day\n 2</string>
	<string name="text_details_day_three">Hike to Namche Bazaar, gateway to Everest Base Camp</string>
	<string name="text_day_three">Day\n 3</string>
	<string name="text_itinerary_details_day1">Day 01</string>
	<string name="text_itinerary_information">*Timing can change depending on conditions</string>
	<string name="text_time_itinerary">10:30 am</string>
	<string name="text_itinerary_action">Hotel: Hotel Clarion</string>
	<string name="text_guide_name">Guide: Krishna Thapa</string>
	<string name="text_guide_type">Guide Type : Culture</string>
	<string name="profile_title_name">Profile</string>
	<string name="profile_username_textview">Name</string>
	<string name="profile_username_editTextview">John Doe</string>
	<string name="profile_email_textview">Email</string>
	<string name="profile_email_editTextView">johndoe@mailpoof.com</string>
	<string name="profile_contact_textview">Contact</string>
	<string name="profile_contact_editTextView">9876543210</string>
	<string name="profile_address_textView">Nationality</string>
	<string name="profile_address_editTextView">Nepali</string>
	<string name="profile_edit_profile">Edit Profile</string>
	<string name="profile_change_password">Change Password</string>
	<string name="title_activity_edit_profile">EditProfileActivity</string>
	<string name="edit_profile_title_name">Edit Profile</string>
	<string name="edit_profile_username_editTextview">Full Name</string>
	<string name="edit_profile_email_edittextview">Email</string>
	<string name="edit_profile_address_edittextview">Address</string>
	<string name="edit_profile_phone_edittextview">Phone</string>
	<string name="edit_profile_dob_edittextview">Date of birth</string>
	<string name="edit_save_text_button">Save</string>
	<string name="change_password_title_name">Change Password</string>
	<string name="old_password_editTextview">Old Password</string>
	<string name="new_password_edittextview">New Password</string>
	<string name="confirm_password_edittextview">Confirm Password</string>
	<string name="submit_button">Submit</string>
	<string name="title_activity_bottom_navigation_try">MainActivity</string>
	<string name="title_home">Home</string>
	<string name="title_dashboard">Dashboard</string>
	<string name="title_notifications">Notifications</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>