<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.travel.activity.splashscreen.SplashActivity">


    <ImageView
        android:id="@+id/iv_background_image"
        android:layout_width="197dp"
        android:layout_height="144dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/logo"
        android:layout_marginStart="@dimen/activity_start_margin"
        android:layout_marginEnd="@dimen/activity_end_margin"
        app:layout_constraintBottom_toTopOf="@+id/tv_powered_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />


    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/name_app"
        android:textSize="12sp"
        android:textColor="@color/blackColor"
        android:layout_marginStart="@dimen/activity_start_margin"
        android:layout_marginEnd="@dimen/activity_end_margin"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_powered_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_background_image"
        app:layout_constraintVertical_bias="0.026" />



    <com.lombokcyberlab.android.multicolortextview.MultiColorTextView
        android:id="@+id/tv_powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_start_margin"
        android:layout_marginEnd="@dimen/activity_end_margin"
        android:fontFamily="@font/poppins_regular"
        android:textSize="16dp"
        app:colors="@array/colorFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        app:text="@string/splash_bottom_text" />



</androidx.constraintlayout.widget.ConstraintLayout>